[gd_scene load_steps=2 format=3 uid="uid://ccxkca6puflbo"]

[ext_resource type="Script" uid="uid://bl654htndwwbj" path="res://ui/player_ui.gd" id="1_cfom6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_cfom6")

[node name="energy" type="Label" parent="."]
offset_left = 21.0
offset_top = 300.0
offset_right = 141.0
offset_bottom = 314.0
text = "Executive Power: 4/4"

[node name="cards_in_deck" type="Label" parent="."]
offset_left = 21.0
offset_top = 283.0
offset_right = 141.0
offset_bottom = 297.0
text = "Cards inside deck: "

[node name="play_turn" type="Button" parent="."]
offset_left = 550.0
offset_top = 192.0
offset_right = 628.0
offset_bottom = 220.0
text = "Play turn"

[node name="play_turn2" type="Button" parent="."]
offset_left = 550.0
offset_top = 229.0
offset_right = 628.0
offset_bottom = 257.0
text = "End round
"

[connection signal="pressed" from="play_turn" to="." method="_on_play_turn_pressed"]
[connection signal="pressed" from="play_turn2" to="." method="_on_play_turn_2_pressed"]
